--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,18 +31,12 @@ jobs:
             -   name: Set up Python ${{ matrix.python }}
                 uses: actions/setup-python@v2
                 with:
-                    id: python
                     python-version: ${{ matrix.python }}
-            # -   name: Install dependencies
-            #     run: |
-            #         mkdir -p _deps_usd && cd _deps_usd
-            #         git clone https://github.com/PixarAnimationStudios/USD.git --depth 1 --branch ${{ matrix.usd-tag }} .
-            #         sudo python ./build_scripts/build_usd.py /usr --no-imaging -v
             -   uses: actions/checkout@v3
             -   name: Buid
                 run: |
                     mkdir build && cd build
-                    cmake -DPython_ROOT_DIR="$pythonLocation" ..
+                    cmake -DPython_FIND_STRATEGY=LOCATION -DPython_ROOT_DIR="$pythonLocation" ..
                     make
             -   name: Run tests
                 run: |
