--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
             -   name: Buid
                 run: |
                     mkdir build && cd build
-                    cmake -DPython_FIND_STRATEGY=LOCATION -DPython_ROOT_DIR="$pythonLocation" ..
+                    cmake -DPython_FIND_STRATEGY=LOCATION ..
                     make
             -   name: Run tests
                 run: |
