--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,16 +16,16 @@ jobs:
             matrix:
                 name: [
                     "USD-22.05-py37",
-                    "USD-22.05-py27",
+                    # "USD-22.05-py27",
                 ]
 
                 include:
                   -   name: "USD-22.05-py37"
                       usd-tag: "v22.05"
                       python: "3.7"
-                  -   name: "USD-22.05-py27"
-                      usd-tag: "v22.05"
-                      python: "2.7"
+                #   -   name: "USD-22.05-py27"
+                #       usd-tag: "v22.05"
+                #       python: "2.7"
 
         steps:
             -   name: Set up Python ${{ matrix.python }}
@@ -33,10 +33,30 @@ jobs:
                 with:
                     python-version: ${{ matrix.python }}
             -   uses: actions/checkout@v3
-            -   name: Buid
+            -   name: Install Conan
+                run: pip install conan
+            -   name: Install Boost + TBB
                 run: |
-                    mkdir build && cd build
-                    cmake -DPython_FIND_STRATEGY=LOCATION ..
+                    mkdir -p build && cd build
+                    conan install boost/1.70.0@ -o boost:without_python=False -g cmake_find_package
+                    conan install tbb/2020.3@ -g cmake_find_package
+            -   name: Install USD
+                run: |
+                    mkdir -p build/USD && cd build/USD
+                    git clone https://github.com/PixarAnimationStudios/USD.git \
+                        --depth 1 --branch ${{ matrix.usd-tag }} .
+                    cmake \
+                        -DCMAKE_MODULE_PATH:FILEPATH="(pwd)/.." \
+                        -DPXR_BUILD_IMAGING=False \
+                        -DCMAKE_INSTALL_PREFIX=/usr \
+                        ..
+            -   name: Build
+                run: |
+                    cd build
+                    cmake \
+                        -DCMAKE_MODULE_PATH:FILEPATH="$(pwd)" \
+                        -DPython_FIND_STRATEGY=LOCATION \
+                        ..
                     make
             -   name: Run tests
                 run: |
