--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,7 @@ jobs:
                     mkdir -p build && cd build
                     conan install boost/1.70.0@ \
                         --options=boost:without_python=False \
+                        --options=boost:without_numpy=True \
                         --generator=cmake_find_package \
                         --build=missing
                     conan install tbb/2020.3@ \
