Ensure that conan has a config to display

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,7 @@ jobs:
             -   name: Install Conan
                 run: |
                     pip install conan
+                    conan profile new default --detect
                     conan profile show default
             -   name: Install Boost + TBB
                 run: |
