--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
             -   uses: actions/checkout@v3
             -   name: Install Conan
                 run: |
-                    pip install conan
+                    pip install conan numpy
                     conan profile new default --detect
                     conan profile show default
             -   name: Install Boost + TBB
