--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,7 +54,7 @@ jobs:
                     git clone https://github.com/PixarAnimationStudios/USD.git \
                         --depth 1 --branch ${{ matrix.usd-tag }} .
                     cmake \
-                        -DCMAKE_MODULE_PATH:FILEPATH="(pwd)/.." \
+                        -DCMAKE_MODULE_PATH:FILEPATH="$(pwd)/.." \
                         -DPXR_BUILD_IMAGING=False \
                         -DCMAKE_INSTALL_PREFIX=/usr \
                         .
