--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,8 @@ jobs:
             -   uses: actions/checkout@v3
             -   name: Install Conan
                 run: |
+                    ls -l ${pythonLocation}
+                    ls -l "${pythonLocation}/include"
                     pip install conan numpy
                     conan profile new default --detect
                     conan profile show default
