--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,16 +32,9 @@ jobs:
                 uses: actions/setup-python@v2
                 with:
                     python-version: ${{ matrix.python }}
-            -   name: Extract Python Config
-                run: |
-                    export PY_EXE=$(python -c "import sys; print(sys.executable)")
-                    export PY_LIBDIR=$(python -c "import sysconfig as sc; print(sc.get_config_vars(\"LIBDIR\"))")
-                    export PY_LIBNAME=$(python -c "import sysconfig as sc; print(sc.get_config_vars(\"LDLIBRARY\"))")
-                    export PY_INCLUDE=$(python -c "import sysconfig as sc; print(sc.get_config_vars(\"INCLUDEPY\"))")
             -   uses: actions/checkout@v3
             -   name: Install Conan
                 run: |
-                    echo ${PY_INCLUDE}
                     pip install conan numpy
                     conan profile new default --detect
                     conan profile show default
@@ -60,12 +53,18 @@ jobs:
                     mkdir -p build/USD && cd build/USD
                     git clone https://github.com/PixarAnimationStudios/USD.git \
                         --depth 1 --branch ${{ matrix.usd-tag }} .
+                    PY_EXE=$(python -c "import sys; print(sys.executable)")
+                    PY_LIBDIR=$(python -c "import sysconfig as sc; \
+                        print(sc.get_config_vars(\"LIBDIR\"))")
+                    PY_LIBNAME=$(python -c "import sysconfig as sc; \
+                        print(sc.get_config_vars(\"LDLIBRARY\"))")
+                    PY_INCLUDE=$(python -c "import sysconfig as sc; \
+                        print(sc.get_config_vars(\"INCLUDEPY\"))")
                     cmake \
                         -DCMAKE_MODULE_PATH:FILEPATH="$(pwd)/.." \
                         -DPXR_BUILD_IMAGING=False \
                         -DPYTHON_EXECUTABLE="${PY_EXE}" \
                         -DPYTHON_LIBRARY="${PY_LIBDIR}/${PY_LIBNAME}" \
-                        -DPYTHON_INCLUDE_DIR="${PY_INCLUDE}" \
                         -DCMAKE_INSTALL_PREFIX=/usr \
                         .
                     make
