--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,7 @@ jobs:
                 run: |
                     pip install conan numpy
                     conan profile new default --detect
+                    conan profile update settings.compiler.libcxx=libstdc++11 default
                     conan profile show default
             -   name: Install Boost + TBB
                 run: |
@@ -65,12 +66,17 @@ jobs:
                         -DCMAKE_MODULE_PATH:FILEPATH="$(pwd)/.." \
                         -DPXR_BUILD_IMAGING=False \
                         -DPYTHON_EXECUTABLE="${PY_EXE}" \
-                        -DPYTHON_LIBRARY="${PY_LIBDIR}/${PY_LIBNAME}" \
                         -DPYTHON_INCLUDE_DIR="${PY_INCLUDE}" \
+                        -DPXR_BUILD_DOCUMENTATION=False \
+                        -DPXR_BUILD_TESTS=False \
+                        -DPXR_BUILD_EXAMPLES=False \
+                        -DPXR_BUILD_TUTORIALS=False \
+                        -DPXR_BUILD_USD_TOOLS=False \
+                        -DPXR_ENABLE_HDF5_SUPPORT=False \
+                        -DPXR_ENABLE_PTEX_SUPPORT=False \
                         -DCMAKE_INSTALL_PREFIX=/usr \
                         .
-                    make
-                    make install
+                    cmake --build . --target install -- -j 24
             -   name: Build
                 run: |
                     cd build
