Drop multiproc building which seems to cause issues

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,7 +76,7 @@ jobs:
                         -DPXR_ENABLE_PTEX_SUPPORT=False \
                         -DCMAKE_INSTALL_PREFIX=/usr \
                         .
-                    cmake --build . --target install -- -j 24
+                    cmake --build . --target install
             -   name: Build
                 run: |
                     cd build
