--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,16 +16,16 @@ jobs:
             matrix:
                 name: [
                     "USD-22.05-py37",
-                    # "USD-22.05-py27",
+                    "USD-22.05-py27",
                 ]
 
                 include:
                   -   name: "USD-22.05-py37"
                       usd-tag: "v22.05"
                       python: "3.7"
-                #   -   name: "USD-22.05-py27"
-                #       usd-tag: "v22.05"
-                #       python: "2.7"
+                  -   name: "USD-22.05-py27"
+                      usd-tag: "v22.05"
+                      python: "2.7"
 
         steps:
             -   name: Set up Python ${{ matrix.python }}
@@ -52,7 +52,7 @@ jobs:
                         --build=missing
             -   name: Install USD
                 run: |
-                    mkdir -p build/USD && cd build/USD
+                    mkdir -p USD/build && cd USD/build
                     git clone https://github.com/PixarAnimationStudios/USD.git \
                         --depth 1 --branch ${{ matrix.usd-tag }} .
                     PY_EXE=$(python -c "import sys; print(sys.executable)")
@@ -63,7 +63,7 @@ jobs:
                     PY_INCLUDE=$(python -c "import sysconfig as sc; \
                         print(sc.get_config_var(\"INCLUDEPY\"))")
                     cmake \
-                        -DCMAKE_MODULE_PATH:FILEPATH="$(pwd)/.." \
+                        -DCMAKE_MODULE_PATH:FILEPATH="$(pwd)/../../build" \
                         -DPXR_BUILD_IMAGING=False \
                         -DPYTHON_EXECUTABLE="${PY_EXE}" \
                         -DPYTHON_INCLUDE_DIR="${PY_INCLUDE}" \
@@ -74,13 +74,14 @@ jobs:
                         -DPXR_BUILD_USD_TOOLS=False \
                         -DPXR_ENABLE_HDF5_SUPPORT=False \
                         -DPXR_ENABLE_PTEX_SUPPORT=False \
-                        -DCMAKE_INSTALL_PREFIX=/usr \
+                        -DCMAKE_INSTALL_PREFIX="$(pwd)/.." \
                         .
                     cmake --build . --target install
             -   name: Build
                 run: |
                     cd build
                     cmake \
+                        -DPXR_USD_LOCATION="$(pwd)/../USD" \
                         -DCMAKE_MODULE_PATH:FILEPATH="$(pwd)" \
                         -DPython_FIND_STRATEGY=LOCATION \
                         ..
