Test config with MacOS

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
     Test-Linux:
-        runs-on: windows-latest
+        runs-on: macos-latest
         timeout-minutes: 150
 
         strategy:
